parent 633d0cbc7f14cf397b175b252a5d578d9de7c9e4 author George MacLean <george.maclean@kajabi.com> 1675203466 -0700 committer Shane Smith <voodoogq@gmail.com> 1706293936 -0600
parent 633d0cbc7f14cf397b175b252a5d578d9de7c9e4
author George MacLean <george.maclean@kajabi.com> 1675203466 -0700
committer Shane Smith <voodoogq@gmail.com> 1706293885 -0600

PRODENG-1577: Push containers to ECR

Amending the correct build/deploy file

might not need this guy

updating root URLs for testing kube deployment

updating dockerfile, and fixing typo in application.rb

might be easier

nope

adding tag release image job

Updating root URLs for new DNS zone

nope

Rebased, added development specific release-deploy job

Adding Production URLS to application.rb

Renaming development job, and removing prod/development tags from primary release GH action

One more push to all environments please

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -35,7 +35,7 @@ ENV BUNDLE_PATH="/app/vendor/gems"
 ENV BUNDLE_APP_CONFIG="/app/.bundle"
 
 
-RUN gem update --system
+#RUN gem update --system
 RUN gem install bundler:$BUNDLER_VERSION
 
 COPY Gemfile Gemfile.lock ./
