chore(release-please/bootstrap/default): release root 1.0.0

--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
     "watch:assets": "cd packages/sage-assets && yarn build:watch",
     "watch:react": "cd packages/sage-react && yarn build:watch",
     "watch:system": "cd packages/sage-system && yarn build:watch"
-  }
+  },
+  "version": "1.0.0"
 }
