--- a/packages/sage-assets/package.json
+++ b/packages/sage-assets/package.json
@@ -17,7 +17,7 @@
     "sassdoc/*"
   ],
   "engines": {
-    "node": "16.x",
+    "node": "16.x || 18.x",
     "npm": "8.x",
     "yarn": "1.x"
   },
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
