--- a/packages/sage-react/.babelrc
+++ b/packages/sage-react/.babelrc
@@ -2,6 +2,12 @@
   "presets": ["@babel/env", "@babel/react"],
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime",
+    [
+      "@babel/plugin-proposal-private-property-in-object",
+      {
+        "loose": true
+      }
+    ]
   ]
 }
