--- a/packages/sage-react/package.json
+++ b/packages/sage-react/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/Kajabi/sage-lib/issues"
   },
   "engines": {
-    "node": "16.x",
+    "node": "16.x || 18.x",
     "npm": "8.x",
     "yarn": "1.x"
   },
