feat: updating to Node18 with support for 16, removing circleci references

--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -6,6 +6,9 @@ jobs:
   lint_test_build:
     name: Lint, Test, Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16, 18]
     steps:
       - name: Clone Sage-Lib Repo
         uses: actions/checkout@v3
