fix: removing branch from deploy workflow, updating secret value in docs/dockerfile

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -8,7 +8,7 @@ ARG NODE_VERSION="16.20.2"
 ARG YARN_VERSION="1.22.18"
 ARG ARCH="x64"
 ARG GITHUB_TOKEN
-ARG SECRET_KEY_BASE="foobarbaz"
+ARG SECRET_KEY_BASE="setting_random_secret_for_asset_precompile"
 
 ENV SECRET_KEY_BASE=$SECRET_KEY_BASE
 ENV RAILS_ENV=$RAILS_ENV
