--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
     "watch:assets": "cd packages/sage-assets && yarn build:watch",
     "watch:react": "cd packages/sage-react && yarn build:watch",
     "watch:system": "cd packages/sage-system && yarn build:watch"
+  },
+  "dependencies": {
+    "@pine-ds/icons": "^7.0.1"
   }
 }
