--- a/packages/sage-react/Dockerfile
+++ b/packages/sage-react/Dockerfile
@@ -3,9 +3,7 @@ FROM alpine:3.17.0
 ARG NONROOT_UID="1000"
 ARG NONROOT_GID="1000"
 ARG NODE_VERSION="18.20.4"
-ARG YARN_VERSION="1.22.18"
 ARG ARCH="x64"
-ARG GITHUB_TOKEN
 
 RUN apk add \
   bash \
@@ -15,36 +13,27 @@ RUN apk add \
   libxml2-dev \
   libxslt-dev \
   tzdata \
-  # Install node and yarn
+  # Install node
   && curl -fsSLO --compressed "https://unofficial-builds.nodejs.org/download/release/v$NODE_VERSION/node-v$NODE_VERSION-linux-$ARCH-musl.tar.xz" \
   && tar -xJf "node-v$NODE_VERSION-linux-$ARCH-musl.tar.xz" -C /usr/local --strip-components=1 --no-same-owner \
   && ln -s /usr/local/bin/node /usr/local/bin/nodejs \
   && rm node-v$NODE_VERSION-linux-$ARCH-musl.tar.xz \
-  && npm -g install yarn@${YARN_VERSION} \
   && apk del --force-broken-world \
   && rm -f /var/cache/apk/* \
   && addgroup -g $NONROOT_GID -S nonroot \
-  && adduser -u $NONROOT_UID -S nonroot -G nonroot -h /workspace
+  && adduser -u $NONROOT_UID -S nonroot -G nonroot -h /workspace \
+  && npm install -g serve
+
 
 RUN mkdir -p /app && chown nonroot:nonroot /app
+
 WORKDIR /app
 ENV HOME="/app"
 
 ENV PORT ${PORT:-4100}
-ENV NODE_PATH=lib
 
-RUN echo "-----> Using .npmrc from config"
-RUN npm config set @kajabi:registry https://npm.pkg.github.com
-RUN npm config set '//npm.pkg.github.com/:_authToken' '${GITHUB_TOKEN}'
-
-COPY --chown={$NONROOT_UID}:${NONROOT_GID} package.json /app/package.json
-RUN yarn install --check-files
-
-COPY --chown={$NONROOT_UID}:${NONROOT_GID} .babelrc /app/.babelrc
-COPY --chown={$NONROOT_UID}:${NONROOT_GID} lib /app/lib
-COPY --chown={$NONROOT_UID}:${NONROOT_GID} .storybook /app/.storybook
-COPY --chown={$NONROOT_UID}:${NONROOT_GID} public /app/public
+COPY --chown={$NONROOT_UID}:${NONROOT_GID} build /app/build
 
 EXPOSE $PORT
 
-CMD [ "yarn", "run", "storybook"]
+CMD [ "serve", "/app/build" ]
