--- a/packages/sage-assets/catalog-info.yaml
+++ b/packages/sage-assets/catalog-info.yaml
@@ -9,8 +9,11 @@ metadata:
     - scss
     - icons
   links:
-    - url: https://sage-lib-sassdocs.herokuapp.com/
-      title: SassDocs Site
+    - url: https://sage-lib-sassdocs.production.kajabi.farm/
+      title: SassDocs Production Site
+      icon: dashboard
+    - url: https://sage-lib-sassdocs.staging.kajabi.farm/
+      title: SassDocs Staging Site
       icon: dashboard
   annotations:
     github.com/project-slug: Kajabi/sage-lib
@@ -32,8 +35,11 @@ metadata:
     - scss
     - sass
   links:
-    - url: https://sage-lib-sassdocs.herokuapp.com/
-      title: SassDocs Site
+    - url: https://sage-lib-sassdocs.production.kajabi.farm/
+      title: SassDocs Production Site
+      icon: dashboard
+    - url: https://sage-lib-sassdocs.staging.kajabi.farm/
+      title: SassDocs Staging Site
       icon: dashboard
   annotations:
     github.com/project-slug: Kajabi/sage-lib
