--- a/packages/sage-react/catalog-info.yaml
+++ b/packages/sage-react/catalog-info.yaml
@@ -7,11 +7,8 @@ metadata:
     - react
     - javascript
   links:
-    - url: https://sage-lib-storybook.production.kajabi.farm/
-      title: Storybook Production Site
-      icon: dashboard
-    - url: https://sage-lib-storybook.staging.kajabi.farm/
-      title: Storybook Staging Site
+    - url: https://sage-lib-storybook.herokuapp.com/
+      title: Storybook Site
       icon: dashboard
   annotations:
     github.com/project-slug: Kajabi/sage-lib
@@ -33,11 +30,8 @@ metadata:
     - javascript
     - storybook
   links:
-    - url: https://sage-lib-storybook.production.kajabi.farm/
-      title: Storybook Production Site
-      icon: dashboard
-    - url: https://sage-lib-storybook.staging.kajabi.farm/
-      title: Storybook Staging Site
+    - url: https://sage-lib-storybook.herokuapp.com/
+      title: Storybook Site
       icon: dashboard
   annotations:
     github.com/project-slug: Kajabi/sage-lib
