chore(tokens): sage pine visual parity (#2070)
* chore: adds Pine packages to repo

* chore: updates Pine stylesheet link to latest version

* style: update progress tokens to pine (#2050)

* style: update checkbox tokens to pine (#2052)

* style: update tokens

* style: hello linter my old friend

* style: hello linter my old friend

* style: revert z-index changes

* style: update sortable tokens to pine (#2059)

* style: update textarea tokens to pine (#2055)

* style: update loader tokens to pine (#2056)

* style: update tokens and success colors

* style: add missing semicolon

* style: revert z-index changes

* fix: adjust font weight of text

* style: updates avatar styles and tokens (#2051)

* style: updates avatar styles and tokens

* chore: updates default icon for React component

* style(avatar): move from sage to pine tokens

* chore: updates core tokens to semantic where possible

* chore: swaps out React stencil component for web component version

* style: update table tokens to pine (#2057)

* style: update tokens

* style: add calc comment

* style: updates button styles to match Pine (#2058)

* style: updates button styles to match Pine

* style: updates copytext component to match Pine

* chore: fixes linting

* style: update tabs tokens to pine (#2060)

* style: update tokens

* style: correct bg color

* style: update popover tokens to pine (#2062)

* style: update input tokens to pine (#2061)

* style: update input tokens

* style: update sage variables to pine

* style: add missing tokens

* style: reorder CSS props

* style: update sage form field message vars

* style: update switch tokens (#2053)

* style: update tokens

* style: hello linter my old friend

* style: hello linter my old friend

* style: update switch tokens

* style: update sage tokens

* style: updated var

---------

Co-authored-by: Phillip Lovelace <phillip.lovelace@kajabi.com>

* chore: adds Pine css to imports

* style: update select tokens to pine (#2063)

* style: up

--- a/packages/sage-react/package.json
+++ b/packages/sage-react/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "@kajabi/sage-assets": "^6.2.1",
+    "@pine-ds/react": "^2.14.0",
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
     "focus-trap": "^6.2.2",
