fix: update docs/catalog-info.yaml with correct owner

--- a/docs/catalog-info.yaml
+++ b/docs/catalog-info.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   type: website
   lifecycle: production
-  owner: user-experience
+  owner: design-system-services
   system: sage
   subcomponentOf: sage-lib
   dependsOn:
