add a GITHUB_TOKEN so that we don't get rate limited

--- a/.github/workflows/release-notification.yml
+++ b/.github/workflows/release-notification.yml
@@ -14,6 +14,7 @@ jobs:
         uses: pozetroninc/github-action-get-latest-release@master
         with:
           repository: ${{ github.repository }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           excludes: prerelease, draft
 
       - name: Notify Standard Model Bot
