--- a/packages/sage-react/package.json
+++ b/packages/sage-react/package.json
@@ -76,6 +76,7 @@
     "npm-run-all": "^4.1.5",
     "react-is": "16.13.1",
     "react-test-renderer": "16.13.1",
+    "resize-observer-polyfill": "^1.5.1",
     "sass-loader": "^10.0.2",
     "typescript": "4.0.3",
     "url-loader": "^4.1.0",
@@ -91,6 +92,7 @@
     "html-react-parser": "^0.14.2",
     "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
+    "raf": "^3.4.1",
     "react-docgen": "^5.4.3",
     "react-sortablejs": "6.0.0",
     "react-uuid": "^1.0.2",
