--- a/docs/package.json
+++ b/docs/package.json
@@ -38,7 +38,7 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@kajabi-ui/styles": "^0.2.0",
+    "@kajabi-ui/styles": "^0.3.0-dev.0",
     "@kajabi/sage-packs": "^6.2.24",
     "@rails/webpacker": "5.2.2",
     "arrive": "^2.4.1",
