--- a/packages/sage-packs/package.json
+++ b/packages/sage-packs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kajabi/sage-packs",
-  "version": "6.2.24",
+  "version": "6.2.25-dev.0",
   "description": "Sage Packs",
   "keywords": [
     "sage",
@@ -31,8 +31,8 @@
     "url": "https://github.com/Kajabi/sage-lib/issues"
   },
   "dependencies": {
-    "@kajabi/sage-assets": "^6.2.24",
-    "@kajabi/sage-react": "^6.2.24",
+    "@kajabi/sage-assets": "^6.2.25-dev.0",
+    "@kajabi/sage-react": "^6.2.25-dev.0",
     "@kajabi/sage-system": "^6.2.18"
   },
   "devDependencies": {
