--- a/packages/sage-assets/package.json
+++ b/packages/sage-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kajabi/sage-assets",
-  "version": "6.2.25-dev.19",
+  "version": "6.2.24",
   "description": "Assets",
   "main": "dist/main.css",
   "repository": {
