--- a/packages/sage-react/package.json
+++ b/packages/sage-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kajabi/sage-react",
-  "version": "6.2.25-dev.19",
+  "version": "6.2.25",
   "description": "React Components",
   "keywords": [
     "react",
@@ -76,7 +76,6 @@
     "npm-run-all": "^4.1.5",
     "react-is": "16.13.1",
     "react-test-renderer": "16.13.1",
-    "resize-observer-polyfill": "^1.5.1",
     "sass-loader": "^10.0.2",
     "typescript": "4.0.3",
     "url-loader": "^4.1.0",
@@ -84,7 +83,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@kajabi/sage-assets": "^6.2.25-dev.19",
+    "@kajabi/sage-assets": "^6.2.24",
     "@popperjs/core": "^2.11.8",
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
@@ -92,7 +91,6 @@
     "html-react-parser": "^0.14.2",
     "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
-    "raf": "^3.4.1",
     "react-docgen": "^5.4.3",
     "react-sortablejs": "6.0.0",
     "react-uuid": "^1.0.2",
